--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "cors": "^2.8.5",
     "dotenv": "^16.6.1",
     "express": "^4.21.2",
+    "google-auth-library": "^9.11.0",
+    "jsonwebtoken": "^9.0.2",
     "node-fetch": "^3.3.2",
     "pg": "^8.16.3",
     "ws": "^8.17.0"
